--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="戸山高校パソコン同好会が制作している作品を紹介しています。"
     />
-    <meta name="og:url" content="https://toyama-pc.github.io/" />
+    <meta name="og:url" content="http://toyama-pc.github.io/" />
     <meta name="og:title" content="戸山高校パソコン同好会" />
     <meta name="og:description" content="戸山高校パソコン同好会が制作している作品を紹介しています。"
     />
@@ -15,11 +15,12 @@
     <meta name="twitter:creator" content="@ruccho_presents" />
     <meta name="twitter:site" content="@ruccho_presents" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://toyama-pc.github.io/media/og-image.png" />
-    <meta name="og:image" content="https://toyama-pc.github.io/media/og-image.png" />
+    <meta name="twitter:image" content="http://toyama-pc.github.io/media/og-image.png" />
+    <meta name="og:image" content="http://toyama-pc.github.io/media/og-image.png" />
     <meta name="og:image:type" content="image/png" />
     <meta name="og:image:width" content="1500" />
     <meta name="og:image:height" content="750" />
+    <meta name="google-site-verification" content="pazTDKvCQw1uVoHg9dSO1je6TfXL09IXW1G6yoyGYRI" />
     <title>戸山高校パソコン同好会</title>
     <link rel="stylesheet" href="style.css"
     />
