Add Encryption Demo

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </div>
     </div>
-    <script src="custom.js"></script>
+    <script src="_ignore/custom_bu.js"></script>
 </body>
 
 </html>
